refactor: change app4

--- a/app/index.pug
+++ b/app/index.pug
@@ -6,6 +6,6 @@ html(lang="en")
         title Index
         link(rel='stylesheet' href='css/style.min.css')
     body
-
-    include includes/header.pug
-    include includes/left.pug
+        .container-xxl gy-3 gx-1.5 bg-gray rounded-1
+            include includes/header.pug
+            include includes/left.pug
