refactor: change app            include includes/left.pug

--- a/app/index.pug
+++ b/app/index.pug
@@ -4,8 +4,10 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Index
+
+        link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous")
         link(rel='stylesheet' href='css/style.min.css')
     body
-        .container-xxl gy-3 gx-1.5 bg-gray rounded-1
+        div.container-xxl.gy-5.gx-3.bg-primary.rounded-1
             include includes/header.pug
             include includes/left.pug
