--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1,8 +1,8 @@
-@import "variables";
+@import "_variables";
 
 .main {
     padding: 0;
     .inner {
-        margin: 0;
+        margin: 2px;
     }
 }
