--- a/app/index.pug
+++ b/app/index.pug
@@ -8,6 +8,7 @@ html(lang="en")
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous")
         link(rel='stylesheet' href='css/style.min.css')
     body
-        div.container-xxl.gy-5.gx-3.bg-primary.rounded-1
-            include includes/header.pug
-            include includes/left.pug
+        .container-xxl.py-3.px-3.bg-primary
+            .bg-light.rounded-1
+                include includes/header.pug
+                include includes/left.pug
