--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1,8 +1,8 @@
-@import "_variables";
+@import "_variables.scss";
 
 .main {
     padding: 0;
     .inner {
-        margin: 2px;
+        margin: 5px;
     }
 }
