refactor: change app9

--- a/app/index.pug
+++ b/app/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
         link(href='../css/style.min.css' rel='stylesheet')
 
     body
-        .container-xxl.pt-5.px-4.bg-gray.w-100
-            .bg-light.rounded-1
+        .container-xxl.pt-5.px-4.bg-gray.w-100.h-100
+            .bg-light.rounded-4
                 include includes/header.pug
                 include includes/left.pug
