--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -1,7 +1,11 @@
-header.header
+header.header.col-4.h-25.bg-primary
     .logo
+        img(src="/app/images/src/Logo.png", alt="logo hexlet")
     nav.menu
-        ul.menu__list
-            li.list_item Контакты
-            li.list_item Сообщения
-            li.list_item Профиль
+        ul.menu_list
+            li.list_item
+                img(src="/app/images/src/people_2.png", alt="contacts")
+            li.list_item
+                img(src="/app/images/src/chat_2.png", alt="massages")
+            li.list_item
+                img(src="/app/images/src/person_2.png", alt="profile")
