refactor: change app10

--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -4,8 +4,8 @@ header.header.col-4.h-25.bg-primary
     nav.menu
         ul.menu_list
             li.list_item
-                img(src="/app/images/src/people_2.png", alt="contacts")
+                img(src="/app/images/src/people_2.png", alt="contact")
             li.list_item
-                img(src="/app/images/src/chat_2.png", alt="massages")
+                img(src="/app/images/src/chat_2.png", alt="messages")
             li.list_item
                 img(src="/app/images/src/person_2.png", alt="profile")
