--- a/app/index.pug
+++ b/app/index.pug
@@ -14,3 +14,4 @@ html(lang="en")
             .bg-light.rounded-4
                 include includes/header.pug
                 include includes/left.pug
+                include includes/right.pug
