--- a/app/chat.pug
+++ b/app/chat.pug
@@ -6,4 +6,4 @@ html(lang="en")
         title Chat
         link(rel='stylesheet' href='css/style.min.css')
     body
-        include includes/left.pug
+        img(src="/app/images/src/hello_message.png", alt="kodovyonok")
