refactor: change app11

--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -1,4 +1,4 @@
-header.header.col-4.h-25.bg-primary
+header.header.h-15.bg-primary
     .logo
         img(src="/app/images/src/Logo.png", alt="logo hexlet")
     nav.menu
