--- a/app/index.pug
+++ b/app/index.pug
@@ -10,10 +10,10 @@ html(lang="en")
         link(href='../css/style.min.css' rel='stylesheet')
 
     body
-        .container-xxl.pt-5.px-4.bg-gray.w-100.h-100
+        .container-xxl.p-4.bg-gray.w-100.h-100
             .bg-light.rounded-4.row.h-100.m-0
-                .col-4.p-0
+                .col-4.p-0.border-end.border-grey
                     include includes/header.pug
                     include includes/left.pug
-                .col-8.h-100.p-0.d-flex.justify-content-center.pt-50.bg-white.rounded-4
+                .col-8.h-100.p-0.d-flex.justify-content-center.pt-50.bg-light.rounded-4
                     include includes/right.pug
