--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -1,3 +1,9 @@
+%c_p_f {
+    color: (var(--bs-light));
+    font-size: 14px;
+    padding-left: 8px;
+}
+
 .header {
     border-top-left-radius: 1rem;
     display: flex;
@@ -20,21 +26,15 @@
             }
             li:first-child::after {
                 content: "Контакты";
-                color: (var(--bs-light));
-                padding-left: 8px;
-                font-size: 14px;
+                @extend %c_p_f;
             }
             li:nth-child(2)::after {
                 content: "Сообщения";
-                color: (var(--bs-light));
-                padding-left: 8px;
-                font-size: 14px;
+                @extend %c_p_f;
             }
             li:last-child::after {
                 content: "Профиль";
-                color: (var(--bs-light));
-                padding-left: 8px;
-                font-size: 14px;
+                @extend %c_p_f;
             }
         }
     }
