refactor: change app14

--- a/app/styles/_left.scss
+++ b/app/styles/_left.scss
@@ -1,3 +1,17 @@
+@mixin hide-scrollbar() {
+    & {
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    }
+
 .left {
     height: 1056px;
 }
