--- a/app/includes/left.pug
+++ b/app/includes/left.pug
@@ -1,12 +1,16 @@
-
+- let i = 0;
 
 .left.h-85.bg-light
     nav.menu
         ul.menu__list
-            each value, index in {'A': {name: "Алексей Примадонин", status: "Онлайн", avatar: "/images/avatar_3.jpg"}, 'В': {name: "Вениамин Редакторович", status: "Онлайн", avatar: "/images/avatar_4.jpg"}, 'Д': {name: "Джедай Падаванов", status: "Был онлайн вчера", avatar: "/images/avatar_2.jpg"}, 'К': [{name: "Кодовёнок Хекслетович", status: "Был онлайн 3 часа назад", avatar: "/images/avatar_1.jpg"}, {name: "Королева Верстальщина", status: "Была онлайн вчера", avatar: "/images/avatar_5.jpg"}], 'П': {name: "Питонист Джангович", status: "Был онлайн вчера", avatar: "/images/avatar_6.jpg"},}
+            each value, index in {'A': [{name: "Алексей Примадонин", status: "Онлайн", avatar: "/images/avatar_3.jpg"}], 'В': [{name: "Вениамин Редакторович", status: "Онлайн", avatar: "/images/avatar_4.jpg"}], 'Д': [{name: "Джедай Падаванов", status: "Был онлайн вчера", avatar: "/images/avatar_2.jpg"}], 'К': [{name: "Кодовёнок Хекслетович", status: "Был онлайн 3 часа назад", avatar: "/images/avatar_1.jpg"}, {name: "Королева Верстальщина", status: "Была онлайн вчера", avatar: "/images/avatar_5.jpg"}], 'П': [{name: "Питонист Джангович", status: "Был онлайн вчера", avatar: "/images/avatar_6.jpg"}],}
                 li
                     .contact
                             a(href= "/" + index + ".html")= index
-                                    p= value.name
-                                    p= value.status
-                                    img(src=value.avatar)
+                                while i < 5
+                                    p= value[i++].name
+                                    p= value[i++].status
+                                    img(src=value[i++].avatar)
+                                    - i++;
+
+
