--- a/app/includes/left.pug
+++ b/app/includes/left.pug
@@ -1,16 +1,16 @@
-- let i = 0;
-
-.left.h-85.bg-light
-    nav.menu
-        ul.menu__list
-            each value, index in {'A': [{name: "Алексей Примадонин", status: "Онлайн", avatar: "/images/avatar_3.jpg"}], 'В': [{name: "Вениамин Редакторович", status: "Онлайн", avatar: "/images/avatar_4.jpg"}], 'Д': [{name: "Джедай Падаванов", status: "Был онлайн вчера", avatar: "/images/avatar_2.jpg"}], 'К': [{name: "Кодовёнок Хекслетович", status: "Был онлайн 3 часа назад", avatar: "/images/avatar_1.jpg"}, {name: "Королева Верстальщина", status: "Была онлайн вчера", avatar: "/images/avatar_5.jpg"}], 'П': [{name: "Питонист Джангович", status: "Был онлайн вчера", avatar: "/images/avatar_6.jpg"}],}
-                li
-                    .contact
-                            a(href= "/" + index + ".html")= index
-                                while i < 5
-                                    p= value[i++].name
-                                    p= value[i++].status
-                                    img(src=value[i++].avatar)
-                                    - i++;
 
 
+.left.h-85.bg-light.p-4
+    h1.py-4.m-0 Контакты
+    .search.py-4.ps-4
+        form.search__form(action='/')
+        input.input.input_radius.search__input(type="search" name="search" placeholder="Поиск по контактам")
+    each value, index in {'A': [{name: "Алексей Примадонин", status: "Онлайн", avatar: "/app/images/src/avatar_3.jpg"}], 'В': [{name: "Вениамин Редакторович", status: "Онлайн", avatar: "/app/images/src/avatar_4.jpg"}], 'Д': [{name: "Джедай Падаванов", status: "Был онлайн вчера", avatar: "/app/images/src/avatar_2.jpg"}], 'К': [{name: "Кодовёнок Хекслетович", status: "Был онлайн 3 часа назад", avatar: "/app/images/src/avatar_1.jpg"}, {name: "Королева Верстальщина", status: "Была онлайн вчера", avatar: "/app/images/src/avatar_5.jpg"}], 'П': [{name: "Питонист Джангович", status: "Был онлайн вчера", avatar: "/app/images/src/avatar_6.jpg"}],}
+        a(href= "/" + index + ".html")= index
+        ul.menu_list.list-group-numbered.p-0.mt-3.mb-5
+            each user in value
+                .contact
+                    li
+                        img(src= user.avatar)
+                    li.name= user.name
+                    li.status= user.status
