--- a/app/styles/_left.scss
+++ b/app/styles/_left.scss
@@ -14,4 +14,46 @@
 
 .left {
     height: 1056px;
+    overflow: hidden;
+
+    .search {
+        outline: 0;
+        margin-bottom: 46px;
+    }
+
+    a {
+        text-decoration: none;
+        color: var(--Secondary, #6C757D);
+    }
+
+    .menu_list {
+
+        .contact:nth-child(2) {
+            margin-top: 14px;
+        }
+        .contact {
+            display: flex;
+            box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.08);
+            flex-wrap: wrap;
+            flex-direction: column;
+            height: 93px;
+
+            li {
+                width: 90px;
+
+                img {
+                    margin: 21px 24px 22px 16px;
+                }
+            }
+
+            .name {
+                height: 24px;
+                width: 286px;
+            }
+            .status {
+                height: 24px;
+                width: 283px;
+            }
+        }
+    }
 }
