--- a/app/includes/left.pug
+++ b/app/includes/left.pug
@@ -6,7 +6,7 @@
         form.search__form(action='/')
         input.input.input_radius.search__input(type="search" name="search" placeholder="Поиск по контактам")
     each value, index in {'A': [{name: "Алексей Примадонин", status: "Онлайн", avatar: "/app/images/src/avatar_3.jpg"}], 'В': [{name: "Вениамин Редакторович", status: "Онлайн", avatar: "/app/images/src/avatar_4.jpg"}], 'Д': [{name: "Джедай Падаванов", status: "Был онлайн вчера", avatar: "/app/images/src/avatar_2.jpg"}], 'К': [{name: "Кодовёнок Хекслетович", status: "Был онлайн 3 часа назад", avatar: "/app/images/src/avatar_1.jpg"}, {name: "Королева Верстальщина", status: "Была онлайн вчера", avatar: "/app/images/src/avatar_5.jpg"}], 'П': [{name: "Питонист Джангович", status: "Был онлайн вчера", avatar: "/app/images/src/avatar_6.jpg"}],}
-        a(href= "/" + index + ".html")= index
+        a.text-muted(href= "/" + index + ".html")= index
         ul.menu_list.list-group-numbered.p-0.mt-3.mb-5
             each user in value
                 .contact
