--- a/app/styles/_left.scss
+++ b/app/styles/_left.scss
@@ -16,14 +16,29 @@
     height: 1056px;
     overflow: hidden;
 
+    h1 {
+        color: #212529;
+        font-family: Roboto;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 700;
+    }
+
     .search {
-        outline: 0;
         margin-bottom: 46px;
+        border-bottom: 1px solid #EFEFEF;
+
+        input {
+            border: 0;
+        }
     }
 
     a {
         text-decoration: none;
-        color: var(--Secondary, #6C757D);
+        font-family: Roboto;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
     }
 
     .menu_list {
@@ -37,22 +52,34 @@
             flex-wrap: wrap;
             flex-direction: column;
             height: 93px;
+            justify-content: center;
+            align-content: start;
 
             li {
                 width: 90px;
 
                 img {
                     margin: 21px 24px 22px 16px;
+                    border-radius: 50%;
                 }
             }
 
             .name {
                 height: 24px;
                 width: 286px;
+                color: #212529;
+                font-family: Roboto;
+                font-weight: 700;
+                font-style: normal;
             }
             .status {
                 height: 24px;
                 width: 283px;
+                font-size: 14px;
+                color: var(--Secondary, #6C757D);
+                font-family: Roboto;
+                font-weight: 400;
+                font-style: normal;
             }
         }
     }
