refactor: change app19

--- a/app/index.pug
+++ b/app/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
         link(href='../css/style.min.css' rel='stylesheet')
 
     body
-        .wrapper.container-xxl.p-4.bg-gray.w-100.h-100
+        .wrapper.container-xxl.bg-gray.w-100.h-100
             .bg-light.rounded-4.row.h-100.m-0
                 .wrapper-left.col-4.p-0.border-end.border-grey
                     include includes/header.pug
