--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -5,19 +5,28 @@
 
 body {
     height: 100%;
+
+    .wrapper {
+        padding: 1.5rem;
+    }
 }
 
 @media screen and (max-width: 414px) {
-    .wrapper {
-        max-width: 414px;
-        padding: 0;
+    body {
 
-        .wrapper-left {
-            width: 414px;
-        }
-        .wrapper-right {
-            width: 0;
-            height: 0;
+        .wrapper {
+            max-width: 414px;
+            max-height: 896px;
+            padding: 0;
+            overflow: hidden;
+
+            .wrapper-left {
+                width: 414px;
+                display: flex;
+                flex-direction: column-reverse;
+                max-height: 896px;
+                overflow: hidden;
+            }
         }
     }
 }
