refactor: change app23

--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -4,7 +4,7 @@ header.header.h-15.bg-primary
     nav.menu
         ul.menu_list
             li.list_item
-                img(src="/app/images/src/people_2.png", alt="contact")
+                img(src="/app/images/src/people_2.png", alt="contacts")
             li.list_item
                 img(src="/app/images/src/chat_2.png", alt="messages")
             li.list_item
