refactor: change app24

--- a/app/includes/left-messages.pug
+++ b/app/includes/left-messages.pug
@@ -1,6 +1,4 @@
-
-
-.left.h-85.bg-light.p-4
+.left.messages.h-85.bg-light.p-4
     h1.py-4.m-0 Контакты
     .search.py-4.ps-4
         form.search__form(action='/')
