--- a/app/index.pug
+++ b/app/index.pug
@@ -14,6 +14,10 @@ html(lang="en")
             .bg-light.rounded-4.row.h-100.m-0
                 .wrapper-left.col-4.p-0.border-end.border-grey
                     include includes/header.pug
-                    include includes/left.pug
+                    include includes/left-contacts.pug
+                    include includes/left-messages.pug
+                    include includes/left-profile.pug
                 .wrapper-right.col-8.h-100.p-0.d-flex.justify-content-center.pt-50.bg-light.rounded-4
                     include includes/right.pug
+        script
+            include main.min.js
