--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1,6 +1,8 @@
 @import "_variables.scss";
 @import "_header.scss";
-@import "_left.scss";
+@import "_left_contacts.scss";
+@import "_left_message.scss";
+@import "_left_profile.scss";
 @import "_right.scss";
 
 body {
