--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -3,10 +3,10 @@ header.header.h-15.bg-primary
         img(src="/app/images/src/Logo.png", alt="logo hexlet")
     nav.menu
         ul.menu_list
-            li.list_item
+            li.list_item.people
                 img(src="/app/images/src/people_2.png", alt="contacts")
-            li.list_item
+            li.list_item.chat
                 img(src="/app/images/src/chat_2.png", alt="messages")
-            li.list_item
+            li.list_item.person
                 img(src="/app/images/src/person_2.png", alt="profile")
 
