--- a/app/includes/left-messages.pug
+++ b/app/includes/left-messages.pug
@@ -1,14 +1,14 @@
 .left.messages.h-85.bg-light.p-4
-    h1.py-4.m-0 Контакты
+    h1.py-4.m-0 Чаты
     .search.py-4.ps-4
         form.search__form(action='/')
         input.input.input_radius.search__input(type="search" name="search" placeholder="Поиск по контактам")
-    each value, index in {'A': [{name: "1111", status: "Онлайн", avatar: "/app/images/src/avatar_3.jpg"}], 'В': [{name: "111", status: "Онлайн", avatar: "/app/images/src/avatar_4.jpg"}], 'Д': [{name: "111", status: "Был онлайн вчера", avatar: "/app/images/src/avatar_2.jpg"}], 'К': [{name: "111", status: "Был онлайн 3 часа назад", avatar: "/app/images/src/avatar_1.jpg"}, {name: "111", status: "Была онлайн вчера", avatar: "/app/images/src/avatar_5.jpg"}], 'П': [{name: "111", status: "Был онлайн вчера", avatar: "/app/images/src/avatar_5.jpg"}],}
-        a.text-muted(href= "/" + index + ".html")= index
+    each value, index in {'A': [{name: "Вениамин Редакторович", status: "o_O", time: "11:45", avatar: "/app/images/src/avatar_3.jpg"}], 'В': [{name: "Джедай Падаванов", status: "Привет, скоро третий проект? Уже скоро надо будет выложить", time: "10:12", avatar: "/app/images/src/avatar_4.jpg"}], 'Д': [{name: "Алексей Примадонин", status: "Тесты упали >_<", time: "08:53", avatar: "/app/images/src/avatar_2.jpg"}],}
         ul.menu_list.list-group-numbered.p-0.mt-3.mb-5
             each user in value
-                a.contact(href= "#")
+                a.messages(href= "#")
                     li
                         img(src= user.avatar)
                     li.name= user.name
+                    li.time= user.time
                     li.status= user.status
