--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1,7 +1,7 @@
 @import "_variables.scss";
 @import "_header.scss";
 @import "_left_contacts.scss";
-@import "_left_message.scss";
+@import "_left_messages.scss";
 @import "_left_profile.scss";
 @import "_right.scss";
 
