refactor: change app28

--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -2,7 +2,7 @@ header.header.h-15.bg-primary
     .logo
         img(src="/app/images/src/Logo.png", alt="logo hexlet")
     nav.menu
-        ul.menu_list
+        ul.menu_list.nav#
             li.list_item.people
                 img(src="/app/images/src/people_2.png", alt="contacts")
             li.list_item.chat
