--- a/app/includes/left-contacts.pug
+++ b/app/includes/left-contacts.pug
@@ -1,6 +1,6 @@
 
 
-.left.contacts.active.h-85.bg-light.p-4
+.left.contacts.tab-pane.active.h-85.bg-light.p-4(id="profile" role="tabpanel" aria-labelledby="profile-tab")
     h1.py-4.m-0 Контакты
     .search.py-4.ps-4
         form.search__form(action='/')
