--- a/app/includes/left-messages.pug
+++ b/app/includes/left-messages.pug
@@ -1,4 +1,4 @@
-.left.messages.h-85.bg-light.p-4
+.left.messages.tab-pane.h-85.bg-light.p-4(id="messages" role="tabpanel" aria-labelledby="messages-tab")
     h1.py-4.m-0 Чаты
     .search.py-4.ps-4
         form.search__form(action='/')
@@ -9,6 +9,8 @@
                 a.messages(href= "#")
                     li
                         img(src= user.avatar)
-                    li.name= user.name
-                    li.time= user.time
-                    li.status= user.status
+                    li.name-time
+                        .name= user.name
+                        .time= user.time
+                    li
+                        .status= user.status
