--- a/app/styles/_left_messages.scss
+++ b/app/styles/_left_messages.scss
@@ -10,11 +10,18 @@
     &::-webkit-scrollbar {
         display: none;
     }
-    }
+}
 
 .left {
     height: 1056px;
-    overflow: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    ::-webkit-scrollbar {
+        display: none;
+    }
 
     h1 {
         color: #212529;
@@ -65,20 +72,25 @@
                 }
             }
 
-            .name {
-                height: 24px;
-                width: 251px;
-                color: #212529;
-                font-family: Roboto;
-                font-weight: 700;
-                font-style: normal;
-            }
+            .name-time {
+                display: flex;
+                width: 286px;
 
-            .time {
-                color: #ADB5BD;
-                font-size: 14px;
-                width: 35px;
-                height: 21px;
+                .name {
+                    height: 24px;
+                    width: 251px;
+                    color: #212529;
+                    font-family: Roboto;
+                    font-weight: 700;
+                    font-style: normal;
+                }
+
+                .time {
+                    color: #ADB5BD;
+                    font-size: 14px;
+                    width: 35px;
+                    height: 21px;
+                }
             }
 
             .status {
@@ -89,6 +101,7 @@
                 font-family: Roboto;
                 font-weight: 400;
                 font-style: normal;
+                overflow: auto;
                 text-overflow: ellipsis;
             }
         }
