--- a/app/styles/_left_messages.scss
+++ b/app/styles/_left_messages.scss
@@ -19,7 +19,7 @@
     overflow-y: auto;
     overflow-x: hidden;
 
-    ::-webkit-scrollbar {
+    &::-webkit-scrollbar {
         display: none;
     }
 
