--- a/app/styles/_left_messages.scss
+++ b/app/styles/_left_messages.scss
@@ -101,8 +101,26 @@
                 font-family: Roboto;
                 font-weight: 400;
                 font-style: normal;
-                overflow: auto;
+                overflow: hidden;
                 text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 415px) {
+    .left {
+        .menu_list {
+            .messages {
+                .name-time {
+                    .name {
+                        width: 204px;
+                    }
+                }
+                .status {
+                        width: 236px;
+                }
             }
         }
     }
