--- a/app/styles/_left_profile.scss
+++ b/app/styles/_left_profile.scss
@@ -32,5 +32,25 @@
     .profile-item {
         box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.08);
         list-style-type: none;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 8px;
+        padding-right: 21px;
+        padding-bottom: 8px;
+        height: 50px;
+
+        li {
+            height: 42px;
+
+            p {
+            margin: 0;
+            height: 21px;
+            }
+        }
+
+        .svg-logo {
+            margin-top: 21px;
+        }
     }
 }
