refactor: change app37

--- a/app/includes/header_1.pug
+++ b/app/includes/header_1.pug
@@ -1,4 +1,4 @@
-header.header.h-15.bg-primary
+header.header.radius-top-left.h-15.bg-primary
     .logo
         img(src="/app/images/src/Logo.png", alt="logo hexlet")
     nav.menu
