--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -4,7 +4,7 @@
 @import "_left_messages.scss";
 @import "_left_profile.scss";
 @import "_right.scss";
-
+@import "_utilities.scss";
 body {
     height: 100%;
 
