refactor: change app38

--- a/app/includes/right.pug
+++ b/app/includes/right.pug
@@ -1,2 +1,2 @@
 .cont_link
-    iframe(src="/app/html/chat.html", frameborder="0")
+    img(src="/app/images/src/hello_message.png", alt="kodovyonok")
