--- a/app/index.pug
+++ b/app/index.pug
@@ -14,7 +14,7 @@ html(lang="en")
         .wrapper.container-xxl.bg-white.w-100.h-100
             .bg-light.rounded-4.row.h-100.m-0
                 .wrapper-left.col-4.p-0.border-end.border-grey
-                    include includes/header_1.pug
+                    include includes/header.pug
                     include includes/left-contacts.pug
                     include includes/left-messages.pug
                     include includes/left-profile.pug
