--- a/app/styles/_right.scss
+++ b/app/styles/_right.scss
@@ -1,9 +1,3 @@
 .cont_link {
-    padding-top: 400px;
-    
-
-    iframe {
-        height: 300px;
-        width: 290px;
-    }
+    margin: 426px auto 440px;
 }
