--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -5,6 +5,7 @@
 @import "_left_profile.scss";
 @import "_right.scss";
 @import "_utilities.scss";
+@import "_right_massages.scss";
 body {
     height: 100%;
 
