--- a/app/index.pug
+++ b/app/index.pug
@@ -11,7 +11,7 @@ html(lang="en")
         script(type='text/javascript' defer src='../bootstrap/bootstrap.min.js')
 
     body
-        .wrapper.container-xxl.bg-white.w-100.h-100
+        .wrapper.container-xxl.bg-gray.w-100.h-100
             .bg-light.rounded-4.row.h-100.m-0
                 .wrapper-left.col-4.p-0.border-end.border-grey
                     include includes/header.pug
@@ -20,5 +20,6 @@ html(lang="en")
                     include includes/left-profile.pug
                 .wrapper-right.col-8.h-100.p-0.d-flex.justify-content-center.pt-50.bg-light.rounded-4
                     include includes/right.pug
+                    include includes/right_messages.pug
         script
             include bootstrap/bootstrap.min.js
