--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -5,7 +5,7 @@
 @import "_left_profile.scss";
 @import "_right.scss";
 @import "_utilities.scss";
-@import "_right_massages.scss";
+@import "_right_messages.scss";
 body {
     height: 100%;
 
@@ -21,6 +21,12 @@ body {
     display: none;
 }
 .profile {
+    display: none;
+}
+.right_messages {
+    display: block;
+}
+.cont_link {
     display: none;
 }
 .active {
