--- a/app/index.pug
+++ b/app/index.pug
@@ -18,7 +18,7 @@ html(lang="en")
                     include includes/left-contacts.pug
                     include includes/left-messages.pug
                     include includes/left-profile.pug
-                .wrapper-right.col-8.h-100.p-0.d-flex.justify-content-center.pt-50.bg-light.rounded-4
+                .wrapper-right.col-8.h-100.p-0.d-flex.pt-50.bg-light.rounded-4
                     include includes/right.pug
                     include includes/right_messages.pug
         script
