--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -1,6 +1,4 @@
 .right_messages {
-    max-width: 928px;
-    height: 1044px;
 
     .chat_header {
         height: 94px;
@@ -40,10 +38,18 @@
         .answer {
             display: flex;
             padding-left: 48px;
+            max-width: 662px;
+
+            img {
+                height: 50px;
+                display: flex;
+                align-self: flex-end;
+            }
 
             ul {
                 list-style-type: none;
-                padding-left: 16px;
+                margin: 0 0 0 16px;
+                padding: 24px;
                 .chat_name {
                     color: var(--Dark, #343A40);
                     font-size: 16px;
@@ -63,8 +69,18 @@
 
         .chat_message {
             display: flex;
+            padding: 0 49px 0 256px;
+
+            img {
+                height: 50px;
+                display: flex;
+                align-self: flex-end;
+            }
+
             ul {
                 list-style-type: none;
+                margin: 0 0 0 16px;
+                padding: 24px;
                 .chat_text {
 
                 }
@@ -73,6 +89,5 @@
                 }
             }
         }
-
     }
 }
