--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -1,4 +1,7 @@
 .right_messages {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     .chat_header {
         height: 94px;
@@ -7,6 +10,7 @@
         display: flex;
         align-items: center;
         border-bottom: 1px solid #EFEFEF;
+        position: sticky;
 
         img {}
 
@@ -33,8 +37,20 @@
     .chat_main {
         display: flex;
         gap: 16px;
-        margin-top: 47px;
+        padding-top: 47px;
         flex-direction: column;
+        flex-grow: 10;
+
+        height: 1056px;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        overflow-y: auto;
+        overflow-x: hidden;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
         .answer {
             display: flex;
             padding-left: 48px;
@@ -88,7 +104,6 @@
                 list-style-type: none;
                 margin: 0 0 0 16px;
                 padding: 24px;
-                max-width: 557px;
                 max-height: 130px;
                 border-radius: 16px;
                 background: var(--Primary, #4545A5);
@@ -108,7 +123,7 @@
         }
     }
     .write_message {
-        margin: 148px 49px 0 48px;
+        margin: 0 49px 0 48px;
         padding: 20px 24px;
         border-top: 1px solid #EFEFEF;
         background: #FFF;
@@ -121,13 +136,13 @@
                 width: 178px;
                 margin-top: 12px;
                 padding: 0;
+                border: 0;
             }
             button {
                 width: 50px;
                 height: 50px;
                 border-radius: 50% !important;
                 background-color: var(--Primary, #4545A5);
-                margin-left: 555px !important;
             }
         }
     }
