--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -40,15 +40,18 @@
                 }
 
             }
-            li:first-child::after {
+            li:first-child {
+                display: none;
+            }
+            li:nth-child(2)::after {
                 content: "Контакты";
                 @extend %c_p_f;
             }
-            li:nth-child(2)::after {
+            li:nth-child(3)::after {
                 content: "Сообщения";
                 @extend %c_p_f;
             }
-            li:last-child::after {
+            li:nth-child(4)::after {
                 content: "Профиль";
                 @extend %c_p_f;
             }
@@ -72,16 +75,23 @@
         nav {
 
             ul {
-                padding-left: 155px;
+                padding-left: 90px;
                 gap: 40px;
 
-                li:first-child::after {
-                    content: "";
+                li {
+                    width: 25px;
+                }
+
+                li:first-child {
+                    display: block;
                 }
                 li:nth-child(2)::after {
                     content: "";
                 }
-                li:last-child::after {
+                li:nth-child(3)::after {
+                    content: "";
+                }
+                li:nth-child(4)::after {
                     content: "";
                 }
             }
