--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -53,6 +53,9 @@ body {
                 max-height: 896px;
                 overflow: hidden;
             }
+            .wrapper-right {
+                max-height: 824px;
+            }
         }
     }
 }
