refactor: change app50

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -24,10 +24,10 @@ body {
     display: none;
 }
 .right_messages {
-    display: flex;
+    display: none;
 }
 .cont_link {
-    display: none;
+    display: block;
 }
 .active {
     display: block;
