--- a/app/index.pug
+++ b/app/index.pug
@@ -4,9 +4,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Index
-        link(href='/app/bootstrap/bootstrap.css' rel='stylesheet')
-        link(href='../css/style.min.css' rel='stylesheet')
-        script(type='text/javascript' defer src='../bootstrap/bootstrap.min.js')
+        link(href='bootstrap.css' rel='stylesheet')
+        link(href='style.min.css' rel='stylesheet')
+        script(type='text/javascript' defer src='bootstrap.min.js')
 
     body
         .wrapper.container-xxl.bg-gray.w-100.h-100
@@ -19,5 +19,3 @@ html(lang="en")
                 .wrapper-right.col-xs-12.col-md-8.p-0.d-flex.pt-50.bg-light.rounded-4
                     include includes/right.pug
                     include includes/right_messages.pug
-        script
-            include bootstrap/bootstrap.min.js
