refactor: change app53

--- a/app/includes/left-profile.pug
+++ b/app/includes/left-profile.pug
@@ -4,7 +4,7 @@
         form.search__form(action='/')
         input.input.input_radius.search__input(type="search" name="search" placeholder="Поиск по сообщениям")
     .card
-        img.card-img-top(src="/app/images/src/avatar_1_1.jpg", alt="logo")
+        img.card-img-top(src="../app/images/src/avatar_1_1.jpg", alt="logo")
         .card-body
             h5.card-title.profile_name Кодовёнок Хекслетович
             p.card-text.profile_discr Милый и скромный помощник начинающих разработчиков. Люблю JavaScript
