--- a/app/includes/right.pug
+++ b/app/includes/right.pug
@@ -1,2 +1,2 @@
 .cont_link
-    img(src="/app/images/src/hello_message.png", alt="kodovyonok")
+    img(src="../app/images/src/hello_message.png", alt="kodovyonok")
