refactor: change app54

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -52,6 +52,7 @@ body {
                 flex-direction: column-reverse;
                 max-height: 896px;
                 overflow: hidden;
+                border-bottom-left-radius: 1rem;
             }
             .wrapper-right {
                 max-height: 824px;
