--- a/app/index.pug
+++ b/app/index.pug
@@ -4,9 +4,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Index
-        link(href='../app/bootstrap/bootstrap.css' rel='stylesheet')
-        link(href='../app/css/style.min.css' rel='stylesheet')
-        script(type='text/javascript' defer src='../app/bootstrap/bootstrap.min.js')
+        link(href='css/bootstrap.css' rel='stylesheet')
+        link(href='css/style.min.css' rel='stylesheet')
+        script(type='text/javascript' defer src='js/bootstrap.min.js')
 
     body
         .wrapper.container-xxl.bg-gray.w-100.h-100
