refactor: change app56

--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -1,6 +1,6 @@
 header.header.radius-top-left.h-15.bg-primary
     .logo
-        img(src="../app/images/src/Logo.png", alt="logo hexlet")
+        img(src="images/src/Logo.png", alt="logo hexlet")
     nav.menu
         ul.menu_list.nav#myTab(role="tablist")
             li.list_item.person(role="presentation")
