refactor: change app57

--- a/app/index.pug
+++ b/app/index.pug
@@ -9,8 +9,8 @@ html(lang="en")
         script(type='text/javascript' defer src='js/bootstrap.min.js')
 
     body
-        .wrapper.container-xxl.bg-gray.w-100.h-100
-            .bg-light.rounded-4.row.h-100.m-0
+        .wrapper.container-xxl.bg-gray.w-100
+            .bg-light.rounded-4.row.m-0
                 .wrapper-left.col-4.p-0.border-end.border-grey
                     include includes/header.pug
                     include includes/left-contacts.pug
