--- a/app/index.pug
+++ b/app/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
 
     body
         .wrapper.container-xxl.bg-gray.w-100
-            .bg-light.rounded-4.row.m-0
+            .wrapper-main.bg-light.rounded-4.row.m-0
                 .wrapper-left.col-4.p-0.border-end.border-grey
                     include includes/header.pug
                     include includes/left-contacts.pug
