refactor: change app59

--- a/app/styles/_left_contacts.scss
+++ b/app/styles/_left_contacts.scss
@@ -13,7 +13,7 @@
     }
 
 .left {
-    height: 1056px;
+    max-height: 852px;
     -ms-overflow-style: none;
     scrollbar-width: none;
     overflow-y: auto;
