refactor: change app62

--- a/app/styles/_left_contacts.scss
+++ b/app/styles/_left_contacts.scss
@@ -18,6 +18,7 @@
     scrollbar-width: none;
     overflow-y: auto;
     overflow-x: hidden;
+    border-bottom-left-radius: 1rem;
 
     &::-webkit-scrollbar {
         display: none;
