refactor: change app71

--- a/app/index.pug
+++ b/app/index.pug
@@ -10,12 +10,12 @@ html(lang="en")
 
     body
         .wrapper.container-xxl.bg-gray.w-100
-            .wrapper-main.bg-light.rounded-4.row.m-0
+            .wrapper-main.bg-white.rounded-4.row.m-0
                 .wrapper-left.col-4.p-0.border-end.border-grey
                     include includes/header.pug
                     include includes/left-contacts.pug
                     include includes/left-messages.pug
                     include includes/left-profile.pug
-                .wrapper-right.col-xs-12.col-md-8.p-0.d-flex.pt-50.bg-light.rounded-4
+                .wrapper-right.col-xs-12.col-md-8.p-0.d-flex.pt-50.bg-white.rounded-4
                     include includes/right.pug
                     include includes/right_messages.pug
