refactor: change app72

--- a/app/index.pug
+++ b/app/index.pug
@@ -11,7 +11,7 @@ html(lang="en")
     body
         .wrapper.container-xxl.bg-gray.w-100
             .wrapper-main.bg-white.rounded-4.row.m-0
-                .wrapper-left.col-4.p-0.border-end.border-grey
+                .wrapper-left.bg-white.col-4.p-0.border-end.border-grey
                     include includes/header.pug
                     include includes/left-contacts.pug
                     include includes/left-messages.pug
