--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -49,10 +49,9 @@ body {
 
         .wrapper {
             max-width: 414px;
-            max-height: 896px;
             padding: 0;
             overflow: hidden;
-            max-height: 900px;
+            max-height: 970px;
 
             .wrapper-left {
                 width: 414px;
@@ -61,6 +60,12 @@ body {
                 max-height: 852px;
                 overflow: hidden;
                 border-bottom-left-radius: 1rem;
+                max-height: 955px;
+
+                .left {
+                    max-height: 955px;
+                }
+
             }
             .wrapper-right {
                 max-height: 852px;
@@ -70,4 +75,5 @@ body {
     .cont_link {
         display: none;
     }
+
 }
