--- a/app/includes/right_messages.pug
+++ b/app/includes/right_messages.pug
@@ -1,4 +1,4 @@
-.right_messages.col-12
+.right_messages.col-12#dialog
     .chat_header.w-100
         img(src="/app/images/src/avatar_4.jpg", alt="logo-veniamin")
         ul
