refactor: change app84

--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -14,4 +14,4 @@ header.header.radius-top-left.h-15.bg-primary
                     img(src="images/src/chat_2.png", alt="masseges")
             li.list_item.person(role="presentation")
                 a(href="#settings").nav-link#settings-tab(data-bs-toggle="tab" data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false")
-                    img(src="images/src/person_2.png", alt="profile")
+                    img(src="images/src/person_2.png", alt="settings")
