refactor: change app85

--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -7,10 +7,10 @@ header.header.radius-top-left.h-15.bg-primary
                 a(href="#dialog").nav-link#chat-tab(data-bs-toggle="tab" data-bs-target="#chat" type="button" role="tab" aria-controls="chat" aria-selected="false")
                     img(src="images/src/chat_left.png", alt="profile")
             li.list_item.people(role="presentation")
-                a(href="#profile").active#profile-tab(data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="true")
+                a(href="#profile").nav-link#profile-tab(data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="true")
                     img(src="images/src/people_2.png", alt="contacts")
             li.list_item.chat(role="presentation")
-                a(href="#messages").nav-link#messages-tab(data-bs-toggle="tab" data-bs-target="#messages" type="button" role="tab" aria-controls="messages" aria-selected="false")
+                a(href="#messages").active#messages-tab(data-bs-toggle="tab" data-bs-target="#messages" type="button" role="tab" aria-controls="messages" aria-selected="false")
                     img(src="images/src/chat_2.png", alt="masseges")
             li.list_item.person(role="presentation")
                 a(href="#settings").nav-link#settings-tab(data-bs-toggle="tab" data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false")
