--- a/app/chat.pug
+++ b/app/chat.pug
@@ -13,7 +13,7 @@ html(lang="en")
             .wrapper-main.bg-white.rounded-4.row.m-0
                 .wrapper-left.bg-white.col-4.p-0.border-end.border-grey
                     include includes/header.pug
-                    include includes/left-contacts.pug
+                    include includes/left-contacts-1.pug
                     include includes/left-messages-1.pug
                     include includes/left-profile.pug
                 .wrapper-right.col-xs-12.col-md-8.p-0.d-flex.pt-50.bg-white.rounded-4
