--- a/app/styles/_right_messages.scss
+++ b/app/styles/_right_messages.scss
@@ -41,7 +41,7 @@
         flex-direction: column;
         flex-grow: 10;
 
-        height: 1056px;
+        max-height: 600px;
         -ms-overflow-style: none;
         scrollbar-width: none;
         overflow-y: auto;
