refactor: change app94

--- a/app/chat.pug
+++ b/app/chat.pug
@@ -12,7 +12,8 @@ html(lang="en")
         .wrapper.container-xxl.bg-gray.w-100
             .wrapper-main.bg-white.rounded-4.row.m-0
                 .wrapper-left.bg-white.col-4.p-0.border-end.border-grey
-                    include includes/header.pug
+                    include includes/header-1.pug
+                    include includes/right_messages.pug
                     include includes/left-contacts-1.pug
                     include includes/left-messages-1.pug
                     include includes/left-profile.pug
