refactor: change app97

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -17,6 +17,9 @@ body {
             .wrapper-left {
                 max-height: 852px;
             }
+            .wrapper-right {
+                display: flex;
+            }
         }
     }
 }
@@ -72,7 +75,7 @@ body {
                     }
                 }
                 .wrapper-right {
-                    max-height: 852px;
+                    display: none;
                 }
             }
         }
