--- a/app/chat.pug
+++ b/app/chat.pug
@@ -17,5 +17,5 @@ html(lang="en")
                     include includes/left-contacts-1.pug
                     include includes/left-messages-1.pug
                     include includes/left-profile.pug
-                .wrapper-right.col-xs-12.col-md-8.p-0.d-flex.pt-50.bg-white.rounded-4
+                .wrapper-right.col-xs-12.col-md-8.p-0.pt-50.bg-white.rounded-4
                     include includes/right_messages.pug
