--- a/app/includes/left-messages-1.pug
+++ b/app/includes/left-messages-1.pug
@@ -6,7 +6,7 @@
     each value, index in {'A': [{name: "Вениамин Редакторович", status: "o_O", time: "11:45", avatar: "images/src/avatar_3.jpg"}], 'В': [{name: "Джедай Падаванов", status: "Привет, скоро третий проект? Уже скоро надо будет выложить", time: "10:12", avatar: "images/src/avatar_4.jpg"}], 'Д': [{name: "Алексей Примадонин", status: "Тесты упали >_<", time: "08:53", avatar: "images/src/avatar_2.jpg"}],}
         ul.menu_list.list-group-numbered.p-0.mt-3
             each user in value
-                a.messages(href= "#")
+                a.messages_a(href= "#")
                     li
                         img(src= user.avatar)
                     li.name-time
