--- a/app/styles/_left_messages.scss
+++ b/app/styles/_left_messages.scss
@@ -55,7 +55,7 @@
             margin-top: 14px;
         }
 
-        .messages {
+        .messages_a {
             display: flex;
             box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.08);
             flex-wrap: wrap;
@@ -113,7 +113,7 @@
 @media screen and (max-width: 415px) {
     .left {
         .menu_list {
-            .messages {
+            .messages_a {
                 .name-time {
                     .name {
                         width: 204px;
