--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -71,7 +71,7 @@ body {
                     max-height: 900px;
 
                     .left {
-                        max-height: 900px;
+                        height: 900px;
                     }
                 }
                 .wrapper-right {
