--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -32,6 +32,7 @@ body {
 }
 .messages {
     display: none;
+    height: 900px;
 }
 .profile {
     display: none;
@@ -71,7 +72,7 @@ body {
                     max-height: 900px;
 
                     .left {
-                        height: 990px;
+                        max-height: 990px;
                     }
                 }
                 .wrapper-right {
