refactor: change app103

--- a/app/includes/header-1.pug
+++ b/app/includes/header-1.pug
@@ -4,7 +4,7 @@ header.header.radius-top-left.h-15.bg-primary
     nav.menu
         ul.menu_list.nav#myTab(role="tablist")
             li.list_item.person(role="presentation")
-                a(href="#dialog").nav-link#dialog-tab(data-bs-toggle="tab" data-bs-target="#dialog" type="button" role="tab" aria-controls="dialog" aria-selected="false")
+                a(href="#current-chat").nav-link#current-chat-tab(data-bs-toggle="tab" data-bs-target="#current-chat" type="button" role="tab" aria-controls="current-chat" aria-selected="false")
                     img(src="images/src/chat_left.png", alt="profile")
             li.list_item.people(role="presentation")
                 a(href="#profile").active#profile-tab(data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="true")
