--- a/app/includes/left-profile.pug
+++ b/app/includes/left-profile.pug
@@ -1,4 +1,4 @@
-.left.contacts.tab-pane.h-85.bg-light.p-4(id="settings" role="tabpanel" aria-labelledby="settings-tab")
+.left.contacts.tab-pane.h-85.bg-light.p-4(id="profile" role="tabpanel" aria-labelledby="profile-tab")
     h1.py-4.m-0 Профиль
     .search.py-4.ps-4
         form.search__form(action='/')
