--- a/app/includes/header.pug
+++ b/app/includes/header.pug
@@ -4,11 +4,11 @@ header.header.radius-top-left.h-15.bg-primary
     nav.menu
         ul.menu_list.nav#myTab(role="tablist")
             li.list_item.people(role="presentation")
-                a(href="#profile").active#profile-tab(data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="true")
+                a(href="#contacts").active#contacts-tab(data-bs-toggle="tab" data-bs-target="#contacts" type="button" role="tab" aria-controls="contacts" aria-selected="true")
                     img(src="images/src/people_2.png", alt="contacts")
             li.list_item.chat(role="presentation")
-                a(href="#messages").nav-link#messages-tab(data-bs-toggle="tab" data-bs-target="#messages" type="button" role="tab" aria-controls="messages" aria-selected="false")
+                a(href="#chats").nav-link#chats-tab(data-bs-toggle="tab" data-bs-target="#chats" type="button" role="tab" aria-controls="chats" aria-selected="false")
                     img(src="images/src/chat_2.png", alt="masseges")
             li.list_item.person(role="presentation")
-                a(href="#settings").nav-link#settings-tab(data-bs-toggle="tab" data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false")
+                a(href="#profile").nav-link#profile-tab(data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false")
                     img(src="images/src/person_2.png", alt="settings")
