--- a/app/includes/left-contacts.pug
+++ b/app/includes/left-contacts.pug
@@ -1,4 +1,4 @@
-.left.bg-white.contacts.active.tab-pane.h-85.bg-light.p-4(id="profile" role="tabpanel" aria-labelledby="profile-tab")
+.left.bg-white.contacts.active.tab-pane.h-85.bg-light.p-4(id="contacts" role="tabpanel" aria-labelledby="contacts-tab")
     h1.py-4.m-0 Контакты
     .search.py-4.ps-4
         form.search__form(action='/')
