refactor: change app107

--- a/app/includes/left-messages.pug
+++ b/app/includes/left-messages.pug
@@ -1,4 +1,4 @@
-.left.messages.tab-pane.h-85.bg-light.p-4(id="chats" role="tabpanel" aria-labelledby="chats-tab")
+.left.messages.tab-pane.h-85.bg-white.p-4(id="chats" role="tabpanel" aria-labelledby="chats-tab")
     h1.py-4.m-0 Чаты
     .search.py-4.ps-4
         form.search__form(action='/')
