refactor: change app110

--- a/app/styles/_left_profile.scss
+++ b/app/styles/_left_profile.scss
@@ -94,12 +94,12 @@
             .card-body {
 
                 .profile_name {
-                    margin-top: 16px;
+                    font-size: 1rem;
                 }
 
                 .profile_discr {
-                    margin-top: 0;
-                    margin-bottom: 16px;
+                    margin: 0;
+
                 }
             }
         }
